<resources>
    <string name="app_name">WildernessWeather</string>
    <string name="title_activity_db">DbActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="button_save">Save</string>

    <string name="delete_button">Delete Button</string>
    <string name="nothing_in_database">Nothing in database</string>

    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="turn_on_weather_warnings">Turn on weather warnings</string>
    <string name="display_preferences">Display Preferences</string>
    <string name="manage_downloaded_data">Manage Downloaded Data</string>
    <string name="weather_source">Weather Source</string>
    <string name="use_dark_mode">Use Dark Mode</string>
    <string name="font_size">Font Size:</string>
    <string name="units_of_measurement">Units Of Measurement:</string>
    <string name="save">Save</string>
    <string name="weatherzone">Weatherzone (weatherzone.com.au)</string>
    <string name="bom">BOM (bom.gov.au)</string>
    <string name="metaweather">Metaweather (metaweather.com)</string>
    <string name="default_weather_source">Default Weather Source</string>
    <string name="low">LOW</string>
    <string name="details">Details</string>
    <string name="wind_speed">WIND SPEED</string>
    <string name="wind_direction">WIND DIRECTION</string>
    <string name="pressure">PRESSURE</string>
    <string name="high">HIGH</string>
    <string name="humidity">HUMIDITY</string>
    <string name="visibility">VISIBILITY</string>
    <string name="predictability">PREDICTABILITY</string>
    <string name="today_s_weather">Today\'s Weather</string>
    <string name="quick_view">Quick View</string>
    <string name="edit_favourites">Edit Favourites</string>

    <string-array name="units_of_measurement">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>

    <string-array name="font_sie">
        <item>Regular</item>
        <item>Large</item>
    </string-array>
    <string name="low">LOW</string>
    <string name="details">Details</string>
    <string name="wind_speed">WIND SPEED</string>
    <string name="wind_direction">WIND DIRECTION</string>
    <string name="pressure">PRESSURE</string>
    <string name="high">HIGH</string>
    <string name="humidity">HUMIDITY</string>
    <string name="visibility">VISIBILITY</string>
    <string name="predictability">PREDICTABILITY</string>



</resources>
