<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings.SettingsActivity">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sw_weatherWarnings"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#E6E6E6"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/turn_on_weather_warnings"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_manageDownloadedData"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#E6E6E6"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/manage_downloaded_data"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:drawableRightCompat="@drawable/ic_baseline_chevron_right_50" />

    <TextView
        android:id="@+id/tv_displayPreferences"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#E6E6E6"
        android:gravity="center_vertical"
        android:onClick="displayPrefsClicked"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/display_preferences"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:drawableRightCompat="@drawable/ic_baseline_chevron_right_50" />

    <TextView
        android:id="@+id/tv_weatherSource"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#E6E6E6"
        android:onClick="weatherSourceClicked"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/weather_source"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:drawableRightCompat="@drawable/ic_baseline_chevron_right_50" />


</LinearLayout>